nodejs/versioned_docs/version-1.14/api/class-testcase.mdx
---
id: class-testcase
title: "TestCase"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

`TestCase` corresponds to every [test(title, testFunction)](./api/class-test.mdx#test-call) call in a test file. When a single [test(title, testFunction)](./api/class-test.mdx#test-call) is running in multiple projects or repeated multiple times, it will have multiple `TestCase` objects in corresponding projects' suites.


- [testCase.ok()](./api/class-testcase.mdx#test-case-ok)
- [testCase.outcome()](./api/class-testcase.mdx#test-case-outcome)
- [testCase.titlePath()](./api/class-testcase.mdx#test-case-title-path)
- [testCase.annotations](./api/class-testcase.mdx#test-case-annotations)
- [testCase.expectedStatus](./api/class-testcase.mdx#test-case-expected-status)
- [testCase.location](./api/class-testcase.mdx#test-case-location)
- [testCase.results](./api/class-testcase.mdx#test-case-results)
- [testCase.retries](./api/class-testcase.mdx#test-case-retries)
- [testCase.timeout](./api/class-testcase.mdx#test-case-timeout)
- [testCase.title](./api/class-testcase.mdx#test-case-title)

## testCase.ok() {#test-case-ok}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-case-ok-return"/> &#60;[boolean]&#62;<a href="#test-case-ok-return" class="list-anchor">#</a>

Whether the test is considered running fine. Non-ok tests fail the test run with non-zero exit code.

## testCase.outcome() {#test-case-outcome}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-case-outcome-return"/> &#60;"skipped"|"expected"|"unexpected"|"flaky"&#62;<a href="#test-case-outcome-return" class="list-anchor">#</a>

Testing outcome for this test. Note that outcome is not the same as [testResult.status](./api/class-testresult.mdx#test-result-status):
* Test that is expected to fail and actually fails is `'expected'`.
* Test that passes on a second retry is `'flaky'`.

## testCase.titlePath() {#test-case-title-path}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="test-case-title-path-return"/> &#60;[Array]<[string]>&#62;<a href="#test-case-title-path-return" class="list-anchor">#</a>

Returns a list of titles from the root down to this test.

## testCase.annotations {#test-case-annotations}
- type: &#60;[Array]<[Object]>&#62;
  - `type` &#60;[string]&#62; Annotation type, for example `'skip'` or `'fail'`.
  - `description` &#60;[void]|[string]&#62; Optional description.

The list of annotations applicable to the current test. Includes annotations from the test, annotations from all [test.describe(title, callback)](./api/class-test.mdx#test-describe) groups the test belongs to and file-level annotations for the test file.

Annotations are available during test execution through [testInfo.annotations](./api/class-testinfo.mdx#test-info-annotations).

Learn more about [test annotations](./test-annotations.mdx).

## testCase.expectedStatus {#test-case-expected-status}
- type: &#60;"passed"|"failed"|"timedOut"|"skipped"&#62;

Expected test status.
* Tests marked as [test.skip(titleOrCondition, testFunctionOrDescription)](./api/class-test.mdx#test-skip) or [test.fixme([condition, description])](./api/class-test.mdx#test-fixme) are expected to be `'skipped'`.
* Tests marked as [test.fail([condition, description])](./api/class-test.mdx#test-fail) are expected to be `'failed'`.
* Other tests are expected to be `'passed'`.

See also [testResult.status](./api/class-testresult.mdx#test-result-status) for the actual status.

## testCase.location {#test-case-location}
- type: &#60;[void]|[Location]&#62;

Location in the source where the test is defined.

## testCase.results {#test-case-results}
- type: &#60;[Array]<[TestResult]>&#62;

Results for each run of this test.

## testCase.retries {#test-case-retries}
- type: &#60;[number]&#62;

The maximum number of retries given to this test in the configuration.

Learn more about [test retries](./test-retries.mdx).

## testCase.timeout {#test-case-timeout}
- type: &#60;[number]&#62;

The timeout given to the test. Affected by [testConfig.timeout](./api/class-testconfig.mdx#test-config-timeout), [testProject.timeout](./api/class-testproject.mdx#test-project-timeout), [test.setTimeout(timeout)](./api/class-test.mdx#test-set-timeout), [test.slow([condition, description])](./api/class-test.mdx#test-slow) and [testInfo.setTimeout(timeout)](./api/class-testinfo.mdx#test-info-set-timeout).

## testCase.title {#test-case-title}
- type: &#60;[string]&#62;

Test title as passed to the [test(title, testFunction)](./api/class-test.mdx#test-call) call.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
